--- a/rutweb-webmin-theme/unauthenticated/gray-virtual-server-style.css
+++ b/rutweb-webmin-theme/unauthenticated/gray-virtual-server-style.css
@@ -29,272 +29,367 @@ table.ui_table .ui_table {
 
 img, a img { border:0; }
 
-tr.row0 {background-color:#e8e8ea;}
-tr.row1 {background-color:#f8f8fa;}
+tr.row0 {
+    background-color:#e8e8ea;
+}
+
+tr.row1 {
+    background-color:#f8f8fa;
+}
+
 table.formsection thead, table.sortable thead, table.ui_table thead, table.loginform thead {
-background-color:#c9c9c9;
-border:0px;
-text-align:left;
+    background-color:#c9c9c9;
+    border:0px;
+    text-align:left;
 }
+
 table.ui_table thead td {
-  padding: 0 2px;
+    padding: 0 2px;
 }
+
 table.sortable tbody td {
-  padding: 2px;
+    padding: 2px;
 }
+
 table.ui_table td * {
-  line-height:1.5em;
+    line-height:1.5em;
 }
-table.ui_table td textarea {line-height:normal; font-family:monospace;}
+
+table.ui_table td textarea {
+    line-height:normal; font-family:monospace;
+}
+
 table.ui_table td div.barchart * {
-  margin: 0;
+    margin: 0;
 }
+
 table.ui_table thead td * {
-  vertical-align:middle;
-  margin: 0;
-  padding: 0 0 0 1px; 
+    vertical-align:middle;
+    margin: 0;
+    padding: 0 0 0 1px; 
 }
+
 table.ui_table dt, table.ui_table dd {
-  padding: 0 2px;
+    padding: 0 2px;
 }
+
 table.ui_form_end_buttons td {
-  padding: 6px 3px;
+    padding: 6px 3px;
 }
+
 div.ui_form_end_buttons {
-  padding: 6px 3px;
+    padding: 6px 3px;
 }
+
 .ui_form_end_buttons input {
-  padding: 2px;
+    padding: 2px;
 }
-table.ui_grid_table td { padding: 2px 4px; }
+
+table.ui_grid_table td { 
+    padding: 2px 4px;
+}
+
 input {
-  padding: 1px;
+    padding: 1px;
 }
+
 th, td {
 	border: none;
 }
-table.formsection tbody, table.sortable tbody, table.ui_table tbody, table.loginform tbody {
-background-color:#f5f5f5;
-}
-a:link, a:visited { color: #5b8101;
-  text-decoration: none;
-}
-a:hover, a:visited:hover { color: #000000;
-  text-decoration: none;
-}
-a.ui-hidden-table-title { color: #393939; }
-title { color: #393939;
-  font-family: sans-serif;
-}
-h1,h2,h3,h4,h5 { color: #393939;
-}
-/* pre { font-size: 77%; } */
-#main { border-style: solid;
-  border:1px solid #FFFFFF;
-  margin:0;
-  padding:0;
-}
-table#main td {
-  padding: 4px;
-}
-tr.mainsel { background-color: #ddffbb; }
-tr.mainhigh { background-color: #ffffbb; }
-tr.mainhighsel { background-color: #bbffcc; }
-.itemhidden { display: none; }
-.itemshown { display:block; }
-.barchart { padding: 1px;
-  border: 1px solid #d9d9d9;
-  white-space: nowrap;
-  /*position:relative;*/
-}
-.ui_post_header{ font-size: 116%;
- text-align: center;
- padding: 4px;
-}
-.ui_subheading { font-size: 116%;
-  font-weight: bold;
-}
-hr { border: 0;
-  width: 90%;
-  height: 1px;
-  color: #D9D9D9;
-  background-color: #D9D9D9;
-}
-table.wrapper, table.shrinkwrapper {
-  background-color:#D9D9D9;
-  border:1px solid #D9D9D9;
-  border-collapse:collapse;
-  empty-cells: hide;
-  margin:0;
-  padding:0;
-}
-table.wrapper table.wrapper, table.shrinkwrapper table.shrinkwrapper {
-  border:none;
-  background-color:#f5f5f5;
-}
-div.wrapper {
-  border:1px solid #D9D9D9;
-  background-color:#F5F5F5;
-  padding:0;
-  margin:0;
-}
-.tabSelected {
-  background-color:#c9c9c9;
-}
-.tabUnselected {
-  background-color:#D9D9D9;
-}
-.goArrow { margin-bottom: -4px; }
 
-.ui_form_label{
-  text-align:right;
-  vertical-align:top;
+table.formsection tbody, table.sortable tbody, table.ui_table tbody, table.loginform tbody {
+    background-color:#f5f5f5;
 }
-.ui_form_pair td {padding:4px;}
-.ui_form_pair td table.ui_radio_table tr td {padding:2px;}
-.ui_form_pair td table tr td {padding:0px;}
-.ui_radio_table tr td {padding:2px;}
-.ui_buttons_table tr td {padding:4px;}
+
+a:link, a:visited { color: #5b8101;
+    text-decoration: none;
+}
+
+a:hover, a:visited:hover {
+    color: #000000;
+    text-decoration: none;
+}
+
+a.ui-hidden-table-title {
+    color: #393939;
+}
+
+title { color: #393939;
+    font-family: sans-serif;
+}
+
+h1,h2,h3,h4,h5 {
+    color: #393939;
+}
+
+#main {
+    border-style: solid;
+    border:1px solid #FFFFFF;
+    margin:0;
+    padding:0;
+}
+
+table#main td {
+    padding: 4px;
+}
+
+tr.mainsel {
+    background-color: #ddffbb;
+}
+
+tr.mainhigh {
+    background-color: #ffffbb;
+}
+
+tr.mainhighsel {
+    background-color: #bbffcc;
+}
+
+.itemhidden {
+    display: none;
+}
+
+.itemshown {
+    display:block;
+}
+
+.barchart {
+    padding: 1px;
+    border: 1px solid #d9d9d9;
+    white-space: nowrap;
+}
+
+.ui_post_header {
+    font-size: 116%;
+    text-align: center;
+    padding: 4px;
+}
+
+.ui_subheading {
+    font-size: 116%;
+    font-weight: bold;
+}
+
+hr {
+    border: 0;
+    width: 90%;
+    height: 1px;
+    color: #D9D9D9;
+    background-color: #D9D9D9;
+    width: 99%;
+}
+
+table.wrapper, table.shrinkwrapper {
+    background-color:#D9D9D9;
+    border:1px solid #D9D9D9;
+    border-collapse:collapse;
+    empty-cells: hide;
+    margin:0;
+    padding:0;
+}
+
+table.wrapper table.wrapper, table.shrinkwrapper table.shrinkwrapper {
+    border:none;
+    background-color:#f5f5f5;
+}
+
+div.wrapper {
+    border:1px solid #D9D9D9;
+    background-color:#F5F5F5;
+    padding:0;
+    margin:0;
+}
+
+.tabSelected {
+    background-color:#c9c9c9;
+}
+
+.tabUnselected {
+    background-color:#D9D9D9;
+}
+
+.goArrow {
+    margin-bottom: -4px;
+}
+
+.ui_form_label {
+    text-align:right;
+    vertical-align:top;
+}
+
+.ui_form_pair td {
+    padding:4px;
+}
+
+.ui_form_pair td table.ui_radio_table tr td {
+    padding:2px;
+}
+
+.ui_form_pair td table tr td {
+    padding:0px;
+}
+
+.ui_radio_table tr td {
+    padding:2px;
+}
+
+.ui_buttons_table tr td {
+    padding:4px;
+}
+
 /* left menu */
 .mode {
-  left: auto;
-  right: auto;
-}
-.linkwithicon {
-  position: relative;
-  white-space: nowrap;
-  left: 2px;
-  width: 16px;
-  padding-top: 3px;
-  padding-bottom: 3px;
-}
-.linkwithicon img, .mode img {
-  margin-bottom: -2px;
-}
-.leftlink {
-  position: relative;
-  left: 4px;
-  right: 4px;
-  line-height: 1.5em;
-}
-.linkindented {
-  border: none;
-  position: relative;
-  margin-right: 2px;
-  margin-left: 20px;
-  line-height: 1.5em;
-}
-.aftericon {
-  display: inline;
-}
-.domainmenu {
-  white-space: nowrap;
-  position: relative;
-  left: 4px;
-  padding-top: 2px;
+    left: auto;
+    right: auto;
 }
 
+.linkwithicon {
+    position: relative;
+    white-space: nowrap;
+    left: 2px;
+    width: 16px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
+.linkwithicon img, .mode img {
+    margin-bottom: -2px;
+}
+
+.leftlink {
+    position: relative;
+    left: 4px;
+    right: 4px;
+    line-height: 1.5em;
+}
+
+.linkindented {
+    border: none;
+    position: relative;
+    margin-right: 2px;
+    margin-left: 20px;
+    line-height: 1.5em;
+}
+
+.aftericon {
+    display: inline;
+}
+
+.domainmenu {
+    white-space: nowrap;
+    position: relative;
+    left: 4px;
+    padding-top: 2px;
+}
+
+/* end left menu */
+
 .ui_submit, input[type=submit], input[type=reset] {
-  display: inline-block;
-  min-width: 16px;
-  text-align: center;
-  color: #444;
-  font-size: 11px;
-  font-weight: bold;
-  height: 27px;
-  padding: 0 8px;
-  line-height: 27px;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px;
-  -webkit-transition: all 0.218s;
-  -moz-transition: all 0.218s;
-  -ms-transition: all 0.218s;
-  -o-transition: all 0.218s;
-  transition: all 0.218s;
-  border: 1px solid #dcdcdc;
-  border: 1px solid rgba(0,0,0,0.1);
-  background-color: #f5f5f5;
-  background-image: -webkit-gradient(linear,left top,left bottom,from(#f5f5f5),to(#f1f1f1));
-  background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
-  background-image: -moz-linear-gradient(top,#f5f5f5,#f1f1f1);
-  background-image: -ms-linear-gradient(top,#f5f5f5,#f1f1f1);
-  background-image: -o-linear-gradient(top,#f5f5f5,#f1f1f1);
-  background-image: linear-gradient(top,#f5f5f5,#f1f1f1);
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-  cursor: default;
-  }
+    display: inline-block;
+    min-width: 16px;
+    text-align: center;
+    color: #444;
+    font-size: 11px;
+    font-weight: bold;
+    height: 27px;
+    padding: 0 8px;
+    line-height: 27px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    -webkit-transition: all 0.218s;
+    -moz-transition: all 0.218s;
+    -ms-transition: all 0.218s;
+    -o-transition: all 0.218s;
+    transition: all 0.218s;
+    border: 1px solid #dcdcdc;
+    border: 1px solid rgba(0,0,0,0.1);
+    background-color: #f5f5f5;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#f5f5f5),to(#f1f1f1));
+    background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
+    background-image: -moz-linear-gradient(top,#f5f5f5,#f1f1f1);
+    background-image: -ms-linear-gradient(top,#f5f5f5,#f1f1f1);
+    background-image: -o-linear-gradient(top,#f5f5f5,#f1f1f1);
+    background-image: linear-gradient(top,#f5f5f5,#f1f1f1);
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    cursor: default;
+}
+
 *+html .ui_submit, input[type=submit], input[type=reset] {
-  min-width: 70px;
-  }
-  button.input[type=submit], input[type=reset], 
-  ui_submit, input[type=submit].bb-button {
-  height: 29px;
-  line-height: 29px;
-  vertical-align: bottom;
-  margin: 0;
-  }
-  *+html ui_submit, input[type=submit], input[type=reset], 
-  *+html input[type=submit].bb-button {
-  overflow: visible;
-  }
-  input[type=submit]:hover {
-/*  border: 1px solid #c6c6c6;*/
-  color: #fff;
-  text-decoration: none;
-  -webkit-transition: all 0.0s;
-  -moz-transition: all 0.0s;
-  -ms-transition: all 0.0s;
-  -o-transition: all 0.0s;
-  transition: all 0.0s;
-  background-color: #79aa04;
-  background-image: -webkit-gradient(linear,left top,left bottom,from(#87c000),to(#79aa04));
-  background-image: -webkit-linear-gradient(top,#87c000,#79aa04);
-  background-image: -moz-linear-gradient(top,#87c000,#79aa04);
-  background-image: -ms-linear-gradient(top,#87c000,#79aa04);
-  background-image: -o-linear-gradient(top,#87c000,#79aa04);
-  background-image: linear-gradient(top,#87c000,#79aa04);
-  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-  -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-  }
-  input[type=reset]:hover {
-/*  border: 1px solid #c6c6c6;*/
-  color: #fff;
-  text-decoration: none;
-  -webkit-transition: all 0.0s;
-  -moz-transition: all 0.0s;
-  -ms-transition: all 0.0s;
-  -o-transition: all 0.0s;
-  transition: all 0.0s;
-  background-color: #79aa04;
-  background-image: -webkit-gradient(linear,left top,left bottom,from(#87c000),to(#79aa04));
-  background-image: -webkit-linear-gradient(top,#87c000,#79aa04);
-  background-image: -moz-linear-gradient(top,#87c000,#79aa04);
-  background-image: -ms-linear-gradient(top,#87c000,#79aa04);
-  background-image: -o-linear-gradient(top,#87c000,#79aa04);
-  background-image: linear-gradient(top,#87c000,#79aa04);
-  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-  -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-  }
-  input[type=submit]:active {
-  background-color: #f6f6f6;
-  background-image: -webkit-gradient(linear,left top,left bottom,from(#f6f6f6),to(#f1f1f1));
-  background-image: -webkit-linear-gradient(top,#f6f6f6,#f1f1f1);
-  background-image: -moz-linear-gradient(top,#f6f6f6,#f1f1f1);
-  background-image: -ms-linear-gradient(top,#f6f6f6,#f1f1f1);
-  background-image: -o-linear-gradient(top,#f6f6f6,#f1f1f1);
-  background-image: linear-gradient(top,#f6f6f6,#f1f1f1);
-  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-  -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-  }
-  input[type=submit]:visited {
-  color: #666;
-  }
+    min-width: 70px;
+}
+
+button.input[type=submit], input[type=reset], 
+ui_submit, input[type=submit].bb-button {
+    height: 29px;
+    line-height: 29px;
+    vertical-align: bottom;
+    margin: 0;
+}
+
+*+html ui_submit, input[type=submit], input[type=reset], 
+*+html input[type=submit].bb-button {
+    overflow: visible;
+}
+
+input[type=submit]:hover {
+    color: #fff;
+    text-decoration: none;
+    -webkit-transition: all 0.0s;
+    -moz-transition: all 0.0s;
+    -ms-transition: all 0.0s;
+    -o-transition: all 0.0s;
+    transition: all 0.0s;
+    background-color: #79aa04;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#87c000),to(#79aa04));
+    background-image: -webkit-linear-gradient(top,#87c000,#79aa04);
+    background-image: -moz-linear-gradient(top,#87c000,#79aa04);
+    background-image: -ms-linear-gradient(top,#87c000,#79aa04);
+    background-image: -o-linear-gradient(top,#87c000,#79aa04);
+    background-image: linear-gradient(top,#87c000,#79aa04);
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+}
+
+input[type=reset]:hover {
+    color: #fff;
+    text-decoration: none;
+    -webkit-transition: all 0.0s;
+    -moz-transition: all 0.0s;
+    -ms-transition: all 0.0s;
+    -o-transition: all 0.0s;
+    transition: all 0.0s;
+    background-color: #79aa04;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#87c000),to(#79aa04));
+    background-image: -webkit-linear-gradient(top,#87c000,#79aa04);
+    background-image: -moz-linear-gradient(top,#87c000,#79aa04);
+    background-image: -ms-linear-gradient(top,#87c000,#79aa04);
+    background-image: -o-linear-gradient(top,#87c000,#79aa04);
+    background-image: linear-gradient(top,#87c000,#79aa04);
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+}
+
+input[type=submit]:active {
+    background-color: #f6f6f6;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#f6f6f6),to(#f1f1f1));
+    background-image: -webkit-linear-gradient(top,#f6f6f6,#f1f1f1);
+    background-image: -moz-linear-gradient(top,#f6f6f6,#f1f1f1);
+    background-image: -ms-linear-gradient(top,#f6f6f6,#f1f1f1);
+    background-image: -o-linear-gradient(top,#f6f6f6,#f1f1f1);
+    background-image: linear-gradient(top,#f6f6f6,#f1f1f1);
+    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+    -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+    box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+}
+
+input[type=submit]:visited {
+    color: #666;
+}
 
 input,
 textarea,
@@ -311,24 +406,20 @@ input[type='text'] {
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
-/*    background-color: #fff;*/
 }
 
 input[type=radio], input[type=image], input[type=checkbox], ui_radio, .ui_radio, ui_checkbox, .ui_checkbox {
-    border: 0px #d1d1d1;
+    border: 0px solid #d1d1d1;
     padding: 5px;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
-/*    background-color: #fff;*/
 }
 
-hr {
-    width: 99%;
-}
-
+/* awie */
 div.searchsort {
     clear: both;
     width: 100%;
     display: none;
 }
+
