--- a/rutweb-webmin-theme/unauthenticated/gray-virtual-server-style.css
+++ b/rutweb-webmin-theme/unauthenticated/gray-virtual-server-style.css
@@ -1,3 +1,4 @@
+/* based on Gray Framed + XenLayer Webmin theme */
 body {
     margin: 8px;
     color: #393939;
@@ -101,7 +102,8 @@ table.formsection tbody, table.sortable tbody, table.ui_table tbody, table.login
     background-color:#f5f5f5;
 }
 
-a:link, a:visited { color: #5b8101;
+a:link, a:visited {
+    color: #5b8101;
     text-decoration: none;
 }
 
@@ -114,7 +116,8 @@ a.ui-hidden-table-title {
     color: #393939;
 }
 
-title { color: #393939;
+title {
+    color: #393939;
     font-family: sans-serif;
 }
 
@@ -200,8 +203,13 @@ div.wrapper {
     margin:0;
 }
 
+/* tabs */
+.ui_tab {
+
+}
+
 .tabSelected {
-    background-color:#c9c9c9;
+    background-color:#D9D9D9;
 }
 
 .tabUnselected {
@@ -236,53 +244,6 @@ div.wrapper {
 .ui_buttons_table tr td {
     padding:4px;
 }
-
-/* left menu */
-.mode {
-    left: auto;
-    right: auto;
-}
-
-.linkwithicon {
-    position: relative;
-    white-space: nowrap;
-    left: 2px;
-    width: 16px;
-    padding-top: 3px;
-    padding-bottom: 3px;
-}
-
-.linkwithicon img, .mode img {
-    margin-bottom: -2px;
-}
-
-.leftlink {
-    position: relative;
-    left: 4px;
-    right: 4px;
-    line-height: 1.5em;
-}
-
-.linkindented {
-    border: none;
-    position: relative;
-    margin-right: 2px;
-    margin-left: 20px;
-    line-height: 1.5em;
-}
-
-.aftericon {
-    display: inline;
-}
-
-.domainmenu {
-    white-space: nowrap;
-    position: relative;
-    left: 4px;
-    padding-top: 2px;
-}
-
-/* end left menu */
 
 .ui_submit, input[type=submit], input[type=reset] {
     display: inline-block;
@@ -389,6 +350,26 @@ input[type=submit]:active {
 
 input[type=submit]:visited {
     color: #666;
+}
+
+input[type=button]:hover {
+    color: #fff;
+    text-decoration: none;
+    -webkit-transition: all 0.0s;
+    -moz-transition: all 0.0s;
+    -ms-transition: all 0.0s;
+    -o-transition: all 0.0s;
+    transition: all 0.0s;
+    background-color: #79aa04;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#87c000),to(#79aa04));
+    background-image: -webkit-linear-gradient(top,#87c000,#79aa04);
+    background-image: -moz-linear-gradient(top,#87c000,#79aa04);
+    background-image: -ms-linear-gradient(top,#87c000,#79aa04);
+    background-image: -o-linear-gradient(top,#87c000,#79aa04);
+    background-image: linear-gradient(top,#87c000,#79aa04);
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
 }
 
 input,
