--- a/rutweb-webmin-theme/unauthenticated/session_login.css
+++ b/rutweb-webmin-theme/unauthenticated/session_login.css
@@ -4,3 +4,35 @@ input[type=submit], input[type=reset] {
 input[type=reset] {
     height: 27px; line-height: 27px;
 }
+
+.ui_form_label {
+    text-align:right;
+    vertical-align:middle;
+}
+
+input.ui_submit {
+    font-size: 14px;
+    height: 30px;
+    line-height: 30px;
+    width: 500px;
+
+    background-color: #f6f6f6;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#f6f6f6),to(#f1f1f1));
+    background-image: -webkit-linear-gradient(top,#f6f6f6,#f1f1f1);
+    background-image: -moz-linear-gradient(top,#f6f6f6,#f1f1f1);
+    background-image: -ms-linear-gradient(top,#f6f6f6,#f1f1f1);
+    background-image: -o-linear-gradient(top,#f6f6f6,#f1f1f1);
+    background-image: linear-gradient(top,#f6f6f6,#f1f1f1);
+    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+    -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+    box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+
+}
+
+input.ui_textbox, input.ui_password {
+    width: 90%;
+}
+
+table.shrinkwrapper {
+    width: 500px;
+}
