--- a/rutweb-webmin-theme/unauthenticated/style-raw.css
+++ b/rutweb-webmin-theme/unauthenticated/style-raw.css
@@ -245,7 +245,7 @@ div.wrapper {
     padding:4px;
 }
 
-.ui_submit, input[type=submit], input[type=reset] {
+.ui_submit, .ui_reset, input[type=submit], input[type=reset] {
     display: inline-block;
     min-width: 16px;
     text-align: center;
@@ -263,19 +263,20 @@ div.wrapper {
     -ms-transition: all 0.218s;
     -o-transition: all 0.218s;
     transition: all 0.218s;
-    border: 1px solid #dcdcdc;
-    border: 1px solid rgba(0,0,0,0.1);
-    background-color: #f5f5f5;
-    background-image: -webkit-gradient(linear,left top,left bottom,from(#f5f5f5),to(#f1f1f1));
-    background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
-    background-image: -moz-linear-gradient(top,#f5f5f5,#f1f1f1);
-    background-image: -ms-linear-gradient(top,#f5f5f5,#f1f1f1);
-    background-image: -o-linear-gradient(top,#f5f5f5,#f1f1f1);
-    background-image: linear-gradient(top,#f5f5f5,#f1f1f1);
     -webkit-user-select: none;
     -moz-user-select: none;
     user-select: none;
     cursor: default;
+
+    background-color: #dedcdc;
+    border: 1px solid #cfcccc;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#dedcdc),to(#f3f3f3));
+    background-image: -webkit-linear-gradient(top,#dedcdc,#f3f3f3);
+    background-image: -moz-linear-gradient(top,#dedcdc,#f3f3f3);
+    background-image: -ms-linear-gradient(top,#dedcdc,#f3f3f3);
+    background-image: -o-linear-gradient(top,#dedcdc,#f3f3f3);
+    background-image: linear-gradient(top,#dedcdc,#f3f3f3);
+
 }
 
 *+html .ui_submit, input[type=submit], input[type=reset] {
@@ -295,26 +296,8 @@ ui_submit, input[type=submit].bb-button {
     overflow: visible;
 }
 
-input[type=submit]:hover {
-    color: #fff;
-    text-decoration: none;
-    -webkit-transition: all 0.0s;
-    -moz-transition: all 0.0s;
-    -ms-transition: all 0.0s;
-    -o-transition: all 0.0s;
-    transition: all 0.0s;
-    background-color: #79aa04;
-    background-image: -webkit-gradient(linear,left top,left bottom,from(#87c000),to(#79aa04));
-    background-image: -webkit-linear-gradient(top,#87c000,#79aa04);
-    background-image: -moz-linear-gradient(top,#87c000,#79aa04);
-    background-image: -ms-linear-gradient(top,#87c000,#79aa04);
-    background-image: -o-linear-gradient(top,#87c000,#79aa04);
-    background-image: linear-gradient(top,#87c000,#79aa04);
-    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-    -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-}
-
+.ui_submit:hover, .ui_reset:hover,
+input[type=submit]:hover,
 input[type=reset]:hover {
     color: #fff;
     text-decoration: none;
@@ -335,21 +318,15 @@ input[type=reset]:hover {
     box-shadow: 0 1px 1px rgba(0,0,0,0.1);
 }
 
-input[type=submit]:active {
-    background-color: #f6f6f6;
-    background-image: -webkit-gradient(linear,left top,left bottom,from(#f6f6f6),to(#f1f1f1));
-    background-image: -webkit-linear-gradient(top,#f6f6f6,#f1f1f1);
-    background-image: -moz-linear-gradient(top,#f6f6f6,#f1f1f1);
-    background-image: -ms-linear-gradient(top,#f6f6f6,#f1f1f1);
-    background-image: -o-linear-gradient(top,#f6f6f6,#f1f1f1);
-    background-image: linear-gradient(top,#f6f6f6,#f1f1f1);
-    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-    -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-    box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-}
-
-input[type=submit]:visited {
-    color: #666;
+input[type=button] {
+    background-color: #dedcdc;
+    border: 1px solid #cfcccc;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#dedcdc),to(#f3f3f3));
+    background-image: -webkit-linear-gradient(top,#dedcdc,#f3f3f3);
+    background-image: -moz-linear-gradient(top,#dedcdc,#f3f3f3);
+    background-image: -ms-linear-gradient(top,#dedcdc,#f3f3f3);
+    background-image: -o-linear-gradient(top,#dedcdc,#f3f3f3);
+    background-image: linear-gradient(top,#dedcdc,#f3f3f3);
 }
 
 input[type=button]:hover {
@@ -403,4 +380,7 @@ div.searchsort {
     width: 100%;
     display: none;
 }
+
+.placeholder { color: #aaa; }
+
 
