--- a/rutweb-webmin-theme/unauthenticated/style-raw.css
+++ b/rutweb-webmin-theme/unauthenticated/style-raw.css
@@ -39,7 +39,7 @@ tr.row1 {
 }
 
 table.formsection thead, table.sortable thead, table.ui_table thead, table.loginform thead {
-    background-color:#c9c9c9;
+    background-color:#d0e0fc/*#c9c9c9*/;
     border:0px;
     text-align:left;
 }
@@ -102,13 +102,13 @@ table.formsection tbody, table.sortable tbody, table.ui_table tbody, table.login
     background-color:#f5f5f5;
 }
 
-a:link, a:visited {
-    color: #5b8101;
+a, a:link, a:visited {
+    color: #0b46ab/*#5b8101*/;
     text-decoration: none;
 }
 
 a:hover, a:visited:hover {
-    color: #000000;
+    color: #c81515;
     text-decoration: none;
 }
 
@@ -209,7 +209,7 @@ div.wrapper {
 }
 
 .tabSelected {
-    background-color:#D9D9D9;
+    background-color:#D0E0FC/*#D9D9D9*/;
 }
 
 .tabUnselected {
@@ -306,13 +306,13 @@ input[type=reset]:hover {
     -ms-transition: all 0.0s;
     -o-transition: all 0.0s;
     transition: all 0.0s;
-    background-color: #79aa04;
-    background-image: -webkit-gradient(linear,left top,left bottom,from(#87c000),to(#79aa04));
-    background-image: -webkit-linear-gradient(top,#87c000,#79aa04);
-    background-image: -moz-linear-gradient(top,#87c000,#79aa04);
-    background-image: -ms-linear-gradient(top,#87c000,#79aa04);
-    background-image: -o-linear-gradient(top,#87c000,#79aa04);
-    background-image: linear-gradient(top,#87c000,#79aa04);
+    background-color: #638DF7/*#79aa04*/;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#366df8/*#87c000*/),to(#638DF7/*#79aa04*/));
+    background-image: -webkit-linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
+    background-image: -moz-linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
+    background-image: -ms-linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
+    background-image: -o-linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
+    background-image: linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
     -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
     -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
     box-shadow: 0 1px 1px rgba(0,0,0,0.1);
@@ -337,13 +337,13 @@ input[type=button]:hover {
     -ms-transition: all 0.0s;
     -o-transition: all 0.0s;
     transition: all 0.0s;
-    background-color: #79aa04;
-    background-image: -webkit-gradient(linear,left top,left bottom,from(#87c000),to(#79aa04));
-    background-image: -webkit-linear-gradient(top,#87c000,#79aa04);
-    background-image: -moz-linear-gradient(top,#87c000,#79aa04);
-    background-image: -ms-linear-gradient(top,#87c000,#79aa04);
-    background-image: -o-linear-gradient(top,#87c000,#79aa04);
-    background-image: linear-gradient(top,#87c000,#79aa04);
+    background-color: #638DF7/*#79aa04*/;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#366df8/*#87c000*/),to(#638DF7/*#79aa04*/));
+    background-image: -webkit-linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
+    background-image: -moz-linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
+    background-image: -ms-linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
+    background-image: -o-linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
+    background-image: linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
     -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
     -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
     box-shadow: 0 1px 1px rgba(0,0,0,0.1);
