--- a/rutweb-webmin-theme/unauthenticated/session_login.css
+++ b/rutweb-webmin-theme/unauthenticated/session_login.css
@@ -1,3 +1,7 @@
+html, body {
+    margin: 5px 0px 0px 0px;
+}
+
 .ui_form_label {
     text-align:right;
     vertical-align:middle;
@@ -5,13 +9,23 @@
 
 input.ui_submit {
     margin-top: 5px;
-    font-size: 14px;
-    height: 30px;
-    line-height: 30px;
+    font-size: 16px;
+    height: 35px;
+    line-height: 35px;
     width: 450px;
+    background: #2F7BF7;
+    border: 1px solid #2F7BF7 !important;
+    color: #ffffff;
+    font-weight: bold;
+}
+
+input.ui_submit:hover {
+    background: #1B6CF2;
+    color: #eeeeee;
 }
 
 input.ui_textbox, input.ui_password {
+    font-size: 14px;
     width: 100%;
 }
 
