--- a/rutweb-webmin-theme/unauthenticated/style.css
+++ b/rutweb-webmin-theme/unauthenticated/style.css
@@ -1,6 +1,9 @@
-/* based on Gray Framed + XenLayer Webmin theme */
+html, body {
+    font-family: helvetica, verdana, arial;
+}
+
 body {
-    margin: 8px;
+    margin: 5px 8px;
     color: #393939;
     line-height:1.5em;
     text-align:left;
@@ -15,6 +18,11 @@ table {
     empty-cells: hide;
     border-collapse: separate;
     margin:0;
+}
+
+th, td {
+    border: none;
+    vertical-align: middle;
 }
 
 table.formsection, table.ui_table, table.loginform {
@@ -39,7 +47,7 @@ tr.row1 {
 }
 
 table.formsection thead, table.sortable thead, table.ui_table thead, table.loginform thead {
-    background-color:#d0e0fc/*#c9c9c9*/;
+    background-color:#d0e0fc;
     border:0px;
     text-align:left;
 }
@@ -90,12 +98,12 @@ table.ui_grid_table td {
     padding: 2px 4px;
 }
 
-input {
-    padding: 1px;
+td.ui_grid_cell {
+   padding: 4px !important;
 }
 
-th, td {
-	border: none;
+input {
+    padding: 1px;
 }
 
 table.formsection tbody, table.sortable tbody, table.ui_table tbody, table.loginform tbody {
@@ -103,7 +111,7 @@ table.formsection tbody, table.sortable tbody, table.ui_table tbody, table.login
 }
 
 a, a:link, a:visited {
-    color: #0b46ab/*#5b8101*/;
+    color: #0b46ab;
     text-decoration: none;
 }
 
@@ -204,12 +212,8 @@ div.wrapper {
 }
 
 /* tabs */
-.ui_tab {
-
-}
-
 .tabSelected {
-    background-color:#D0E0FC/*#D9D9D9*/;
+    background-color:#D0E0FC;
 }
 
 .tabUnselected {
@@ -245,7 +249,8 @@ div.wrapper {
     padding:4px;
 }
 
-.ui_submit, .ui_reset, input[type=submit], input[type=reset] {
+.ui_submit, .ui_reset, input[type=submit], input[type=reset],
+input[type=button] {
     display: inline-block;
     min-width: 16px;
     text-align: center;
@@ -253,8 +258,10 @@ div.wrapper {
     font-size: 11px;
     font-weight: bold;
     height: 27px;
-    padding: 0 8px;
     line-height: 27px;
+    padding: 0 8px;
+    margin-bottom: 3px;
+    vertical-align: middle;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
@@ -267,68 +274,21 @@ div.wrapper {
     -moz-user-select: none;
     user-select: none;
     cursor: default;
-
     background-color: #dedcdc;
     border: 1px solid #cfcccc;
-    background-image: -webkit-gradient(linear,left top,left bottom,from(#dedcdc),to(#f3f3f3));
-    background-image: -webkit-linear-gradient(top,#dedcdc,#f3f3f3);
-    background-image: -moz-linear-gradient(top,#dedcdc,#f3f3f3);
-    background-image: -ms-linear-gradient(top,#dedcdc,#f3f3f3);
-    background-image: -o-linear-gradient(top,#dedcdc,#f3f3f3);
-    background-image: linear-gradient(top,#dedcdc,#f3f3f3);
-
 }
 
-*+html .ui_submit, input[type=submit], input[type=reset] {
+*+html .ui_submit, .ui_reset, input[type=submit], input[type=reset] {
     min-width: 70px;
 }
 
-button.input[type=submit], input[type=reset], 
-ui_submit, input[type=submit].bb-button {
-    height: 29px;
-    line-height: 29px;
-    vertical-align: bottom;
-    margin: 0;
-}
-
-*+html ui_submit, input[type=submit], input[type=reset], 
-*+html input[type=submit].bb-button {
+*+html .ui_submit, .ui_reset, input[type=submit], input[type=reset] {
     overflow: visible;
 }
 
 .ui_submit:hover, .ui_reset:hover,
 input[type=submit]:hover,
-input[type=reset]:hover {
-    color: #fff;
-    text-decoration: none;
-    -webkit-transition: all 0.0s;
-    -moz-transition: all 0.0s;
-    -ms-transition: all 0.0s;
-    -o-transition: all 0.0s;
-    transition: all 0.0s;
-    background-color: #638DF7/*#79aa04*/;
-    background-image: -webkit-gradient(linear,left top,left bottom,from(#366df8/*#87c000*/),to(#638DF7/*#79aa04*/));
-    background-image: -webkit-linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
-    background-image: -moz-linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
-    background-image: -ms-linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
-    background-image: -o-linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
-    background-image: linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
-    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-    -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-}
-
-input[type=button] {
-    background-color: #dedcdc;
-    border: 1px solid #cfcccc;
-    background-image: -webkit-gradient(linear,left top,left bottom,from(#dedcdc),to(#f3f3f3));
-    background-image: -webkit-linear-gradient(top,#dedcdc,#f3f3f3);
-    background-image: -moz-linear-gradient(top,#dedcdc,#f3f3f3);
-    background-image: -ms-linear-gradient(top,#dedcdc,#f3f3f3);
-    background-image: -o-linear-gradient(top,#dedcdc,#f3f3f3);
-    background-image: linear-gradient(top,#dedcdc,#f3f3f3);
-}
-
+input[type=reset]:hover,
 input[type=button]:hover {
     color: #fff;
     text-decoration: none;
@@ -337,13 +297,8 @@ input[type=button]:hover {
     -ms-transition: all 0.0s;
     -o-transition: all 0.0s;
     transition: all 0.0s;
-    background-color: #638DF7/*#79aa04*/;
-    background-image: -webkit-gradient(linear,left top,left bottom,from(#366df8/*#87c000*/),to(#638DF7/*#79aa04*/));
-    background-image: -webkit-linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
-    background-image: -moz-linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
-    background-image: -ms-linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
-    background-image: -o-linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
-    background-image: linear-gradient(top,#366df8/*#87c000*/,#638DF7/*#79aa04*/);
+    background: #2F7BF7;
+    border: 1px solid #2F7BF7;
     -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
     -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
     box-shadow: 0 1px 1px rgba(0,0,0,0.1);
@@ -352,13 +307,12 @@ input[type=button]:hover {
 input,
 textarea,
 select,
-ui_textbox,
-ui_password,
-ui_select,
-ui_opt_textbox,
-input[type='email'],
-input[type='password'],
-input[type='text'] {
+.ui_textbox,
+.ui_password,
+.ui_select,
+.ui_opt_textbox,
+input[type=password],
+input[type=text] {
     border: 1px solid #d1d1d1;
     padding: 5px;
     -webkit-border-radius: 2px;
@@ -366,7 +320,7 @@ input[type='text'] {
     border-radius: 2px;
 }
 
-input[type=radio], input[type=image], input[type=checkbox], ui_radio, .ui_radio, ui_checkbox, .ui_checkbox {
+input[type=radio], input[type=image], input[type=checkbox], .ui_radio, .ui_checkbox {
     border: 0px solid #d1d1d1;
     padding: 5px;
     -webkit-border-radius: 2px;
@@ -374,13 +328,19 @@ input[type=radio], input[type=image], input[type=checkbox], ui_radio, .ui_radio,
     border-radius: 2px;
 }
 
-/* awie */
-div.searchsort {
-    clear: both;
-    width: 100%;
-    display: none;
+.ui_textbox,
+.ui_password {
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
 
+.ui_buttons_table .ui_submit {
+    min-width: 120px;
+}
+
+.ui_nav_link {
+    float: left;
+}
 .placeholder { color: #aaa; }
 
 
